<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>vgalloy</groupId>
    <artifactId>java-over-rabbitmq</artifactId>
    <version>1.5.0-SNAPSHOT</version>

    <properties>
        <!-- Project -->
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Maven -->
        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>

        <!-- Checkstyle -->
        <checkstyle.version>2.17</checkstyle.version>
        <checkstyle.checkstyle.location>config/checkstyle/checkstyle.xml</checkstyle.checkstyle.location>
        <checkstyle.suppressions.location>config/checkstyle/suppressions.xml</checkstyle.suppressions.location>

        <!-- Mojo version checker -->
        <versions-maven-plugin.version>2.4</versions-maven-plugin.version>

        <!-- AMQP -->
        <amqp-client.version>4.1.1</amqp-client.version>
        <qpid-broker.version>6.1.3</qpid-broker.version>

        <!-- Gson -->
        <gson.version>2.8.1</gson.version>

        <!-- Log -->
        <slf4j-api.version>1.7.25</slf4j-api.version>
        <logback-classic.version>1.2.3</logback-classic.version>

        <!-- Test -->
        <junit.version>4.12</junit.version>
    </properties>

    <dependencies>
        <!-- Rabbitmq -->
        <dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>amqp-client</artifactId>
            <version>${amqp-client.version}</version>
        </dependency>

        <!-- Gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Qpid -->
        <dependency>
            <groupId>org.apache.qpid</groupId>
            <artifactId>qpid-broker</artifactId>
            <version>${qpid-broker.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Log -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!-- Maven -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- Checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <configLocation>${checkstyle.checkstyle.location}</configLocation>
                    <suppressionsLocation>${checkstyle.suppressions.location}</suppressionsLocation>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Mojo Version Checker : mvn versions:display-dependency-updates -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin.version}</version>
                <inherited>false</inherited>
                <configuration>
                    <outputEncoding>${project.build.sourceEncoding}</outputEncoding>
                    <outputFile>target/outdated-dependencies.txt</outputFile>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>